--- a/sdrgui/gui/glscopenggui.ui
+++ b/sdrgui/gui/glscopenggui.ui
@@ -1138,6 +1138,29 @@ kS/s</string>
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QToolButton" name="saveTrace">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>24</width>
+         <height>24</height>
+        </size>
+       </property>
+       <property name="toolTip">
+        <string>Save trace IQ data to file</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../resources/res.qrc">
+         <normaloff>:/save.png</normaloff>:/save.png</iconset>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
